# Viper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: App.hpp  Config.hpp  Food.hpp  Game.hpp  HighScore.hpp  Renderer.hpp  Snake.hpp  Types.hpp
src/: App.cpp  Game.cpp  HighScore.cpp  Renderer.cpp  Snake.cpp
